[project]
name = "interview-task"
version = "0.1.0"
description = "Задачки с собеседований, LeetCode, CodeWars (решаю их на Python)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Mikhail Savin", email = "jtprogru@gmail.com" }]
dependencies = []

[dependency-groups]
dev = ["black==26.3.1", "flake8==7.1.2", "isort==6.0.1", "pytest==9.0.3"]

[tool.uv]
package = false

[tool.black]
line-length = 120
target-version = ['py314']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
